<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/background_design"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center"
        android:textColor="@android:color/white"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/email_login"
        android:background="@drawable/edit_background"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:id="@+id/password_login"
        android:inputType="textPassword"
        android:background="@drawable/edit_background"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="@drawable/edit_background"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account_sign_up_here"
        android:gravity="center"
        android:padding="7dp"
        android:id="@+id/signup_txt"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/white"
        />


        </LinearLayout>

    </ScrollView>



</LinearLayout>